--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.0.0",
     "react-context-bridge": "^0.0.5",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.1.0",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
