--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
@@ -21,7 +22,9 @@
     "react-context-bridge": "^0.0.5",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "react-spinners": "^0.17.0",
     "react-webcam": "^7.2.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.1.0",
     "three": "^0.175.0",
     "tw-animate-css": "^1.2.5"
