--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
     "axios": "^1.8.4",
@@ -20,9 +21,12 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-context-bridge": "^0.0.5",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-spinners": "^0.17.0",
+    "react-toastify": "^11.0.5",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.1.0",
