--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.1.1",
-    "axios": "^1.8.4",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
@@ -25,13 +25,16 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "react-speech-recognition": "^4.0.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
+    "react-use-clipboard": "^1.0.9",
     "react-webcam": "^7.2.0",
     "recharts": "^2.15.3",
     "tailwind-merge": "^3.1.0",
     "three": "^0.175.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "web-speech-cognitive-services": "^8.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
